--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <script>
         const svgFiles = [
             // Add the names of your SVG files here
-            'image1.svg',
-            'image2.svg',
-            'image3.svg'
+            'Airfryer_Icon_AH_filled.svg',
+            'Airfryer_Icon_AH_outlined.svg',
+            'Bowl_Icon_AH_filled.svg'
         ];
 
         const gallery = document.getElementById('gallery');
