--- a/index.html
+++ b/index.html
@@ -31,7 +31,33 @@
             // Add the names of your SVG files here
             'Airfryer_Icon_AH_filled.svg',
             'Airfryer_Icon_AH_outlined.svg',
-            'Bowl_Icon_AH_filled.svg'
+            'Bowl_Icon_AH_filled.svg',
+            'Bowl_Icon_AH_outlined.svg.svg',
+            'Cappuchino_Icon_AH_Flat.svg',
+            'Dolce_Gusto_Icon_AH_Flat.svg',
+            'Dulce_Gusto_Cup_Icon_AH_Flat.svg',
+            'Dulce_Gusto_Cup_Icon_AH_Inverted_Flat.svg',
+            'Espresso_Icon_AH_Flat.svg',
+            'Espresso_Machine_Icon_AH_Flat.svg',
+            'Filterautomaat_Icon_AH_Flat.svg',
+            'Frituur_Netje_Icon_AH_filled.svg',
+            'Frituur_Netje_Icon_AH_outlined.svg',
+            'Frying_Pan_Top_Icon_AH_filled.svg.svg',
+            'Frying_Pan_Top_Icon_AH_outlined.svg.svg',
+            'Grain_Icon_AH_filled.svg',
+            'Grain_Icon_AH_outlined.svg',
+            'icon.svg',
+            'icon.svg',
+            'icon.svg',
+            'icon.svg',
+            'icon.svg',
+            'icon.svg',
+            'icon.svg',
+            'icon.svg',
+            'icon.svg',
+            'icon.svg',
+            'icon.svg',
+            'icon.svg',
         ];
 
         const gallery = document.getElementById('gallery');
