--- a/index.html
+++ b/index.html
@@ -46,18 +46,42 @@
             'Frying_Pan_Top_Icon_AH_outlined.svg.svg',
             'Grain_Icon_AH_filled.svg',
             'Grain_Icon_AH_outlined.svg',
-            'icon.svg',
-            'icon.svg',
-            'icon.svg',
-            'icon.svg',
-            'icon.svg',
-            'icon.svg',
-            'icon.svg',
-            'icon.svg',
-            'icon.svg',
-            'icon.svg',
-            'icon.svg',
-            'icon.svg',
+            'Grill_Icon_AH_filled.svg',
+            'Grill_Icon_AH_outlined.svg',
+            'Grill_Pan_Icon_AH_filled.svg',
+            'Grill_Pan_Icon_AH_outlined.svg',
+            'Koffie_Iconen_Albert_Heijn_9mm.svg',
+            'Koffieboon_Icon_AH_Flat.svg',
+            'Koffieboontjes_Icon_AH_Flat.svg',
+            'Koffieschepje_Icon_AH_Flat.svg',
+            'Latte_Icon_AH.svg',
+            'Lungo_Icon_AH_Flat.svg',
+            'Microwave_Icon_AH_filled.svg',
+            'Microwave_Icon_AH_outlined.svg',
+            'Moka_Icon_AH_Flat.svg',
+            'Nespresso_Cup_Icon_AH_filled_Flat.svg',
+            'Nespresso_Cup_Icon_AH_outlined_Flat.svg',
+            'Nespresso_Icon_AH_Flat.svg',
+            'No_Gluten_Icon_AH_filled.svg',
+            'No_Gluten_Icon_AH_outlined.svg',
+            'Opschenk_Icon_AH_Flat.svg',
+            'Oven_Airfryer_Icon_AH_filled.svg',
+            'Oven_Airfryer_Icon_AH_outlined.svg',
+            'Oven_Icon_AH_filled.svg',
+             'Oven_Icon_AH_outlined.svg',
+             'Pan_Icon_AH_filled.svg',
+             'Pan_Icon_AH_outlined.svg',
+             'Risteretto_Icon_AH_Flat.svg',
+             'Senseo_AH_Flat.svg',
+             'Senseo_Pads_Icon_AH.svg',
+             'Staafmixer_Icon_AH_filled.svg',
+             'Staafmixer_Icon_AH_outlined.svg',
+             'Volautomaat_Icon_AH_Flat.svg',
+             'Waterdruppel_Icon_AH_filled.svg',
+             'Waterdruppel_Icon_AH_outlined.svg',
+             'Wok_Icon_AH_filled.svg',
+             'Wok_Icon_AH_outlined.svg',
+            
         ];
 
         const gallery = document.getElementById('gallery');
