--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             'Airfryer_Icon_AH_filled.svg',
             'Airfryer_Icon_AH_outlined.svg',
             'Bowl_Icon_AH_filled.svg',
-            'Bowl_Icon_AH_outlined.svg.svg',
+            'Bowl_Icon_AH_outlined.svg',
             'Cappuchino_Icon_AH_Flat.svg',
             'Dolce_Gusto_Icon_AH_Flat.svg',
             'Dulce_Gusto_Cup_Icon_AH_Flat.svg',
@@ -42,8 +42,8 @@
             'Filterautomaat_Icon_AH_Flat.svg',
             'Frituur_Netje_Icon_AH_filled.svg',
             'Frituur_Netje_Icon_AH_outlined.svg',
-            'Frying_Pan_Top_Icon_AH_filled.svg.svg',
-            'Frying_Pan_Top_Icon_AH_outlined.svg.svg',
+            'Frying_Pan_Top_Icon_AH_filled.svg',
+            'Frying_Pan_Top_Icon_AH_outlined.svg',
             'Grain_Icon_AH_filled.svg',
             'Grain_Icon_AH_outlined.svg',
             'Grill_Icon_AH_filled.svg',
