--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </style>
 </head>
 <body>
-    <h1>SVG Gallery</h1>
+    <h1>AH Icons</h1>
     <div class="gallery" id="gallery"></div>
 
     <script>
