--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </style>
 </head>
 <body>
-    <h3>AH Icons</h3>
+    <h3><img src="logo.svg" alt="Logo" class="logo">AH Icons</h3>
     <div class="gallery" id="gallery"></div>
 
     <script>
