--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
             flex-wrap: wrap;
             justify-content: center;
         }
+        .logo {
+        width: auto; /* Maintain aspect ratio */
+        height: 24px; /* Set height to 24px */
+        margin-right: 10px; /* Space between logo and title */
+        vertical-align: middle; /* Align with text */
+    }
         .gallery img {
             margin: 10px;
             max-width: 150px;
