--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         width: auto; /* Maintain aspect ratio */
         height: 20px; /* Set height to 24px */
         margin-right: 10px; /* Space between logo and title */
-        vertical-align: top; /* Align with text */
+        vertical-align: center; /* Align with text */
     }
         .gallery img {
             margin: 10px;
