--- a/index.html
+++ b/index.html
@@ -27,15 +27,16 @@
             height: auto;
         }
         .download-button {
-            background-color: black; /* Button color */
-            color: white; /* Text color */
-            border: none; /* No border */
-            border-radius: 20px; /* Pill shape */
-            padding: 10px 20px; /* Padding */
-            cursor: pointer; /* Pointer on hover */
-            font-size: 16px; /* Font size */
-            margin: 20px 0; /* Space above and below the button */
-        }
+    background-color: black; /* Button color */
+    color: white; /* Text color */
+    border: none; /* No border */
+    border-radius: 20px; /* Pill shape */
+    padding: 15px 30px; /* Increase padding for larger button */
+    cursor: pointer; /* Pointer on hover */
+    font-size: 18px; /* Increase font size */
+    margin: 20px 0; /* Space above and below the button */
+    width: 100px; /* Set a specific width (optional) */
+}
         .download-button:hover {
             background-color: #333; /* Darker shade on hover */
         }
