--- a/index.html
+++ b/index.html
@@ -112,6 +112,13 @@
             'Waterdruppel_Icon_AH_outlined.svg',
             'Wok_Icon_AH_filled.svg',
             'Wok_Icon_AH_outlined.svg',
+            'AuBainMarie-AH-outlined.svg',
+            'Broodrooster-AH-outlined.svg',
+            'Klok-AH-outlined.svg',
+            'Ontdooien-AH-Outlined.svg',
+            'Stamper-AH-outlined.svg',
+            'Stoommandje-AH-Outlined.svg',
+            'Timer-5-mintuten-AH-outline.svg',
         ];
 
         const gallery = document.getElementById('gallery');
