--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
     </style>
 </head>
 <body>
-    <h2><img src="logo.svg" alt="AH Icons Logo" class="logo"> AH Icons</h2>
+   <body>
+    <h1 style="display: flex; align-items: center;">
+        <img src="logo.svg" alt="AH Icons Logo" class="logo" style="height: 30px;"> AH Icons
+    </h1>
 
     <!-- Download Button -->
     <button class="download-button" onclick="downloadZip()" aria-label="Download all icons">Download All</button>
