--- a/index.html
+++ b/index.html
@@ -5,17 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AH Icons - Icon Gallery</title>
     <style>
-     body {
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Center horizontally */
-    justify-content: center; /* Center vertically */
-    height: 100vh; /* Full viewport height */
-    font-family: Arial, sans-serif;
-    text-align: center;
-    margin: 0; /* Remove default margin */
-}
-
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 20px;
+        }
         .gallery {
             display: flex;
             flex-wrap: wrap;
