--- a/index.html
+++ b/index.html
@@ -46,10 +46,7 @@
     </style>
 </head>
 <body>
-   <body>
-    <h1 style="display: flex; align-items: center;">
-        <img src="logo.svg" alt="AH Icons Logo" class="logo" style="height: 30px;"> AH Icons
-    </h1>
+    <h2><img src="logo.svg" alt="AH Icons Logo" class="logo"> AH Icons</h2>
 
     <!-- Download Button -->
     <button class="download-button" onclick="downloadZip()" aria-label="Download all icons">Download All</button>
