--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             margin: 10px;
             max-width: 150px;
             height: auto;
+            cursor: pointer; /* Change cursor to pointer */
         }
         .download-button {
             background-color: black;
@@ -49,7 +50,7 @@
         <img src="logo.svg" alt="AH Icons Logo" class="logo"> AH Icons
     </h1>
 
-    <button class="download-button" onclick="downloadZip()" aria-label="Download all icons">Download All</button>
+    <button class="download-button" onclick="downloadAllZip()" aria-label="Download all icons">Download All</button>
 
     <label for="size-slider">Icon Size:</label>
     <input type="range" id="size-slider" class="slider" min="30" max="200" value="30" aria-label="Adjust icon size">
@@ -129,6 +130,7 @@
             img.src = `https://raw.githubusercontent.com/pieterfrank/ahicons/main/${file}`;
             img.alt = `${file.replace(/_/g, ' ').replace('.svg', '')} icon`;
             img.style.width = `${defaultSize}px`;
+            img.onclick = () => downloadFile(file); // Add click event to download the SVG
             gallery.appendChild(img);
         });
 
@@ -140,8 +142,18 @@
             });
         });
 
-        // Function to download the ZIP file
-        function downloadZip() {
+        // Function to download the individual SVG file
+        function downloadFile(fileName) {
+            const link = document.createElement('a');
+            link.href = `https://raw.githubusercontent.com/pieterfrank/ahicons/main/${fileName}`;
+            link.download = fileName;
+            document.body.appendChild(link);
+            link.click();
+            document.body.removeChild(link);
+        }
+
+        // Function to download all icons as a ZIP file
+        function downloadAllZip() {
             const link = document.createElement('a');
             link.href = 'https://github.com/pieterfrank/ahicons/raw/main/ahicons.zip';
             link.download = 'ahicons.zip';
