--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
             flex-wrap: wrap;
             justify-content: center;
         }
+        h1 {
+    font-size: 24px; /* Example size; adjust as needed */
+}
         .logo {
-            height: 20px;
-            margin-right: 10px;
-            vertical-align: middle;
+            height: 1em; /* Match the logo's height to the font size */
+    margin-right: 10px;
+    vertical-align: middle;
         }
         .gallery img {
             margin: 10px;
