--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             height: 1em; /* Match the logo's height to the font size */
     margin-right: 10px;
     vertical-align: middle;
+        horizontal-align: middle;
         }
         .gallery img {
             margin: 10px;
