--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-        }
-        h1 {
-    font-size: 24px; /* Example size; adjust as needed */
+  h1 {
+    display: flex; /* Use flexbox for alignment */
+    align-items: center; /* Align items vertically */
+    font-size: 24px; /* Set desired font size */
 }
-        .logo {
-            height: 1em; /* Match the logo's height to the font size */
+
+.logo {
+    height: 1em; /* Match to font size */
     margin-right: 10px;
-    vertical-align: middle;
-        }
+}
+
         .gallery img {
             margin: 10px;
             max-width: 150px;
@@ -53,9 +55,10 @@
     </style>
 </head>
 <body>
-    <h1>
-        <img src="logo.svg" alt="AH Icons Logo" class="logo"> AH Icons
-    </h1>
+   <h1>
+    <img src="logo.svg" alt="AH Icons Logo" class="logo"> AH Icons
+</h1>
+
 
     <button class="download-button" onclick="downloadAllZip()" aria-label="Download all icons">Download All</button>
 
