--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     font-size: 24px; /* Example size; adjust as needed */
 }
         .logo {
-            height: 1em; /* Match the logo's height to the font size */
-    margin-right: 24px;
+            height: 24px; /* Match the logo's height to the font size */
+    margin-right: 10px;
     vertical-align: middle;
         }
         .gallery img {
