--- a/index.html
+++ b/index.html
@@ -18,11 +18,6 @@
         h1 {
     font-size: 24px; /* Example size; adjust as needed */
 }
-        .logo {
-            height: 1em; /* Match the logo's height to the font size */
-    margin-right: 10px;
-    vertical-align: middle;
-        }
         .gallery img {
             margin: 10px;
             max-width: 150px;
@@ -53,8 +48,7 @@
     </style>
 </head>
 <body>
-    <h1>
-        <img src="logo.svg" alt="AH Icons Logo" class="logo"> AH Icons
+    <h1> AH Icons
     </h1>
 
     <button class="download-button" onclick="downloadAllZip()" aria-label="Download all icons">Download All</button>
