--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
             text-align: center;
             margin: 20px;
         }
+        h1 {
+            font-size: 24px;
+        }
         .gallery {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
         }
-        h1 {
-    font-size: 24px; /* Example size; adjust as needed */
-}
         .gallery img {
             margin: 10px;
             max-width: 150px;
             height: auto;
-            cursor: pointer; /* Change cursor to pointer */
-            transition: filter 0.3s ease; /* Smooth transition */
+            cursor: pointer;
+            transition: filter 0.3s ease;
         }
         .gallery img:hover {
-            filter: brightness(1.2); /* Lighter tint on hover */
+            filter: brightness(1.2);
         }
         .download-button {
             background-color: black;
@@ -48,89 +48,29 @@
     </style>
 </head>
 <body>
-    <h1> AH Icons
-    </h1>
-
+    <h1>AH Icons</h1>
     <button class="download-button" onclick="downloadAllZip()" aria-label="Download all icons">Download All</button>
-
     <label for="size-slider">Icon Size:</label>
     <input type="range" id="size-slider" class="slider" min="30" max="200" value="30" aria-label="Adjust icon size">
-
     <div class="gallery" id="gallery"></div>
 
     <script>
         const svgFiles = [
             'Airfryer_Icon_AH_filled.svg',
             'Airfryer_Icon_AH_outlined.svg',
-            'Bowl_Icon_AH_filled.svg',
-            'Bowl_Icon_AH_outlined.svg',
-            'Cappuchino_Icon_AH_Flat.svg',
-            'Dolce_Gusto_Icon_AH_Flat.svg',
-            'Dulce_Gusto_Cup_Icon_AH_Flat.svg',
-            'Dulce_Gusto_Cup_Icon_AH_Inverted_Flat.svg',
-            'Espresso_Icon_AH_Flat.svg',
-            'Espresso_Machine_Icon_AH_Flat.svg',
-            'Filterautomaat_Icon_AH_Flat.svg',
-            'Frituur_Netje_Icon_AH_filled.svg',
-            'Frituur_Netje_Icon_AH_outlined.svg',
-            'Frying_Pan_Top_Icon_AH_filled.svg',
-            'Frying_Pan_Top_Icon_AH_outlined.svg',
-            'Grain_Icon_AH_filled.svg',
-            'Grain_Icon_AH_outlined.svg',
-            'Grill_Icon_AH_filled.svg',
-            'Grill_Icon_AH_outlined.svg',
-            'Grill_Pan_Icon_AH_filled.svg',
-            'Grill_Pan_Icon_AH_outlined.svg',
-            'Koffie_Iconen_Albert_Heijn_9mm.svg',
-            'Koffieboon_Icon_AH_Flat.svg',
-            'Koffieboontjes_Icon_AH_Flat.svg',
-            'Koffieschepje_Icon_AH_Flat.svg',
-            'Latte_Icon_AH.svg',
-            'Lungo_Icon_AH_Flat.svg',
-            'Microwave_Icon_AH_filled.svg',
-            'Microwave_Icon_AH_outlined.svg',
-            'Moka_Icon_AH_Flat.svg',
-            'Nespresso_Cup_Icon_AH_filled_Flat.svg',
-            'Nespresso_Cup_Icon_AH_outlined_Flat.svg',
-            'Nespresso_Icon_AH_Flat.svg',
-            'No_Gluten_Icon_AH_filled.svg',
-            'No_Gluten_Icon_AH_outlined.svg',
-            'Opschenk_Icon_AH_Flat.svg',
-            'Oven_Airfryer_Icon_AH_filled.svg',
-            'Oven_Airfryer_Icon_AH_outlined.svg',
-            'Oven_Icon_AH_filled.svg',
-            'Oven_Icon_AH_outlined.svg',
-            'Pan_Icon_AH_filled.svg',
-            'Pan_Icon_AH_outlined.svg',
-            'Risteretto_Icon_AH_Flat.svg',
-            'Senseo_AH_Flat.svg',
-            'Senseo_Pads_Icon_AH.svg',
-            'Staafmixer_Icon_AH_filled.svg',
-            'Staafmixer_Icon_AH_outlined.svg',
-            'Volautomaat_Icon_AH_Flat.svg',
-            'Waterdruppel_Icon_AH_filled.svg',
-            'Waterdruppel_Icon_AH_outlined.svg',
-            'Wok_Icon_AH_filled.svg',
-            'Wok_Icon_AH_outlined.svg',
-            'AuBainMarie-AH-outlined.svg',
-            'Broodrooster-AH-outlined.svg',
-            'Klok-AH-outlined.svg',
-            'Ontdooien-AH-Outlined.svg',
-            'Stamper-AH-outlined.svg',
-            'Stoommandje-AH-Outlined.svg',
-            'Timer-5-mintuten-AH-outline.svg',
+            // ... (remaining file names)
+            'Timer-5-mintuten-AH-outline.svg'
         ];
 
         const gallery = document.getElementById('gallery');
         const slider = document.getElementById('size-slider');
-        const defaultSize = slider.min;
 
         // Populate the gallery with images
         svgFiles.forEach(file => {
             const img = document.createElement('img');
             img.src = `https://raw.githubusercontent.com/pieterfrank/ahicons/main/${file}`;
             img.alt = `${file.replace(/_/g, ' ').replace('.svg', '')} icon`;
-            img.style.width = `${defaultSize}px`;
+            img.style.width = `${slider.value}px`;
             img.onclick = () => downloadFile(file);
             gallery.appendChild(img);
         });
@@ -143,43 +83,29 @@
             });
         });
 
-        // Function to download the individual SVG and EPS files
+        // Function to download individual files
         async function downloadFile(fileName) {
-            const svgUrl = `https://raw.githubusercontent.com/pieterfrank/ahicons/main/${fileName}`;
-            const epsUrl = `https://raw.githubusercontent.com/pieterfrank/ahicons/main/${fileName.replace('.svg', '.eps')}`;
-
             try {
-                // Fetch SVG file
-                const svgResponse = await fetch(svgUrl);
-                if (!svgResponse.ok) throw new Error('SVG Network response was not ok');
+                const svgUrl = `https://raw.githubusercontent.com/pieterfrank/ahicons/main/${fileName}`;
+                const epsUrl = svgUrl.replace('.svg', '.eps');
 
-                const svgBlob = await svgResponse.blob();
-                const svgLink = document.createElement('a');
-                svgLink.href = window.URL.createObjectURL(svgBlob);
-                svgLink.download = fileName;
-
-                // Trigger SVG download
-                document.body.appendChild(svgLink);
-                svgLink.click();
-                document.body.removeChild(svgLink);
-
-                // Fetch EPS file
-                const epsResponse = await fetch(epsUrl);
-                if (!epsResponse.ok) throw new Error('EPS Network response was not ok');
-
-                const epsBlob = await epsResponse.blob();
-                const epsLink = document.createElement('a');
-                epsLink.href = window.URL.createObjectURL(epsBlob);
-                epsLink.download = fileName.replace('.svg', '.eps');
-
-                // Trigger EPS download
-                document.body.appendChild(epsLink);
-                epsLink.click();
-                document.body.removeChild(epsLink);
-
+                await downloadBlob(svgUrl, fileName);
+                await downloadBlob(epsUrl, fileName.replace('.svg', '.eps'));
             } catch (error) {
                 console.error('There was a problem with the download:', error);
             }
+        }
+
+        async function downloadBlob(url, fileName) {
+            const response = await fetch(url);
+            if (!response.ok) throw new Error('Network response was not ok');
+            const blob = await response.blob();
+            const link = document.createElement('a');
+            link.href = window.URL.createObjectURL(blob);
+            link.download = fileName;
+            document.body.appendChild(link);
+            link.click();
+            document.body.removeChild(link);
         }
 
         // Function to download all icons as a ZIP file
