--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
     </style>
 </head>
 <body>
-    <h1>AH Icons</h1>
+    <div>
+        <img src="ahicons/logo.svg" alt="Logo" style="height: 50px; vertical-align: middle; margin-right: 10px;">
+        <h1>AH Icons</h1>
+    </div>
     <button class="download-button" onclick="downloadAllZip()" aria-label="Download all icons">Download All</button>
     <label for="size-slider">Icon Size:</label>
     <input type="range" id="size-slider" class="slider" min="30" max="200" value="30" aria-label="Adjust icon size">
