--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     </style>
 </head>
 <body>
-    <div>
-        <img src="logo.svg" alt="Logo" style="height: 24px; vertical-align: middle; margin-right: 10px;">
+    <div style="display: flex; align-items: center;">
+        <img src="path/to/your/logo.png" alt="Logo" style="height: 50px; margin-right: 10px;">
         <h1>AH Icons</h1>
     </div>
     <button class="download-button" onclick="downloadAllZip()" aria-label="Download all icons">Download All</button>
