--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 </head>
 <body>
     <div style="display: flex; align-items: center; justify-content: center;">
-        <img src="logo.svg" alt="Logo" style="height: 22px; margin-right: 10px;">
-        <h1>AH Icons</h1>
+        <img src="path/to/your/logo.svg" alt="Logo" style="height: 30px; margin-right: 10px;">
+        <h1 style="margin: 0;">AH Icons</h1> <!-- Added margin: 0; to remove default spacing -->
     </div>
     <button class="download-button" onclick="downloadAllZip()" aria-label="Download all icons">Download All</button>
     <label for="size-slider">Icon Size:</label>
