--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <body>
     <div style="display: flex; align-items: center; justify-content: center;">
         <img src="logo.svg" alt="Logo" style="height: 20px; margin-right: 10px;">
-        <h1 style="margin: 0;">AH Icons</h1> <!-- Added margin: 0; to remove default spacing -->
+        <h1 style="margin: 0;">icons</h1> <!-- Added margin: 0; to remove default spacing -->
     </div>
     <button class="download-button" onclick="downloadAllZip()" aria-label="Download all icons">Download All</button>
     <label for="size-slider">Icon Size:</label>
