--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@
             flex-wrap: wrap;
             justify-content: center;
         }
-        .gallery img {
-            margin: 10px;
-            max-width: 150px;
-            height: auto;
-            cursor: pointer;
-            transition: filter 0.3s ease;
-        }
-        .gallery img:hover {
-            filter: brightness(1.2);
-        }
+         .gallery img {
+        margin: 10px;
+        max-width: 150px;
+        height: auto;
+        cursor: pointer;
+        transition: filter 0.3s ease; /* Smooth transition */
+    }
+
+    .gallery img:hover {
+        filter: hue-rotate(180deg); /* Change color on hover */
+    }
         .download-button {
             background-color: black;
             color: white;
