--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         transition: filter 0.3s ease; /* Smooth transition */
     }
 
-    .gallery img:hover {
-        filter: hue-rotate(180deg); /* Change color on hover */
-    }
+  .gallery img:hover {
+    filter: brightness(1.2) contrast(1.2); /* Brightens and adds contrast on hover */
+}
         .download-button {
             background-color: black;
             color: white;
